# betting-nft-game

./: Anchor.toml  Readme.md  package-lock.json  package.json  test-key.json
programs/betting/: Cargo.toml
programs/betting/src/: constants.rs  error.rs  lib.rs  utils.rs
programs/betting/src/instructions/: build_nft.rs  burn_fragments.rs  buy_bundle.rs  buy_nft.rs  cancel_arena.rs  claim_day_rank_reward.rs  claim_eight_box.rs  claim_hour_rank_reward.rs  claim_referral_reward.rs  claim_reward.rs  claim_week_rank_reward.rs  create_fragment_mints.rs  end_arena.rs  end_day.rs  end_hour.rs  end_week.rs  init_day_state.rs  init_eight_box_state.rs  init_hour_state.rs  init_nft_build.rs  init_user_state.rs  init_week_state.rs  initialize.rs  mint_fragment.rs  mod.rs  open_arena.rs  open_bundle.rs  return_bet.rs  start_arena.rs  user_bet.rs
programs/betting/src/instructions/close_accounts/: close_arena_state.rs  close_day_result.rs  close_eight_box_state.rs  close_hour_result.rs  close_week_result.rs  mod.rs
programs/betting/src/states/: arena_state.rs  day_result.rs  day_state.rs  eight_box_state.rs  global_state.rs  hour_result.rs  hour_state.rs  mod.rs  nft_build_state.rs  user_bet_state.rs  user_state.rs  week_result.rs  week_state.rs
programs/betting/src/views/: get_day_rank.rs  get_hour_rank.rs  get_week_rank.rs  mod.rs
tests/: betting.ts  program.ts
tests/libs/: accounts.ts  constants.ts  instructions.ts  keys.ts  user.ts  utils.ts
