[package]
name = "betting"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "betting"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.24.2", features = ["init-if-needed"]} 
anchor-spl = "0.24.2"
pyth-client = "0.2.2"
mpl-token-metadata = { version = "1.3.2", features = ["no-entrypoint"] }